fiksa bug i dropdown og uønsket horisontal scrollbar

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ nav {
     position: fixed;
     width: 99%;
     top: 0;
-    z-index: 1;
+    z-index: 1000000000;
     height: 15vh;
     padding: 0 20px;
     margin: 10px;
@@ -339,7 +339,7 @@ body.dark .toggleSirkel{
     align-items: center;
 }
 .gradientsContainer{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     filter: url(#goo) blur(40px);
     position: absolute;
